homepage feature component removed

--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -39,7 +39,7 @@
                             <div class="single-counter">
                                 <i class="icon-line-awesome-trophy"></i>
                                 <div class="counter-inner">
-                                    <h3><span class="counter">99</span>%</h3>
+                                    <h3><span class="counter">99</span></h3>
                                     <span class="counter-title">Patients Registered</span>
                                 </div>
                             </div>
