--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,6 +1,6 @@
     <!-- Wrapper -->
-    <div id="wrapper" class="wrapper-with-transparent-header">
-    
+    <!-- <div id="wrapper" class="wrapper-with-transparent-header">
+     -->
   
     
     
@@ -15,28 +15,28 @@
             
             
             <!-- Features Jobs -->
-            <div class="section gray margin-top-45 padding-top-65 padding-bottom-75">
+            <!-- <div class="section gray margin-top-45 padding-top-65 padding-bottom-75">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
-                            
+                             -->
                             <!-- Section Headline -->
-                            <div class="section-headline margin-top-0 margin-bottom-35">
+                            <!-- <div class="section-headline margin-top-0 margin-bottom-35">
                                 <h3>Recent Tasks</h3>
                                 <a href="tasks-list-layout-1.html" class="headline-link">Browse All Tasks</a>
-                            </div>
+                            </div> -->
                             
                             <!-- Jobs Container -->
-                            <div class="tasks-list-container compact-list margin-top-35">
-                                    
+                            <!-- <div class="tasks-list-container compact-list margin-top-35">
+                                     -->
                                 <!-- Task -->
-                                <a href="single-task-page.html" class="task-listing">
+                                <!-- <a href="single-task-page.html" class="task-listing"> -->
             
                                     <!-- Job Listing Details -->
-                                    <div class="task-listing-details">
-            
+                                    <!-- <div class="task-listing-details">
+             -->
                                         <!-- Details -->
-                                        <div class="task-listing-description">
+                                        <!-- <div class="task-listing-description">
                                             <h3 class="task-listing-title">Food Delviery Mobile App</h3>
                                             <ul class="task-icons">
                                                 <li><i class="icon-material-outline-location-on"></i> San Francisco</li>
@@ -62,15 +62,15 @@
                                         </div>
                                     </div>
                                 </a>
-            
+             -->
                                 <!-- Task -->
-                                <a href="single-task-page.html" class="task-listing">
+                                <!-- <a href="single-task-page.html" class="task-listing"> -->
             
                                     <!-- Job Listing Details -->
-                                    <div class="task-listing-details">
+                                    <!-- <div class="task-listing-details"> -->
             
                                         <!-- Details -->
-                                        <div class="task-listing-description">
+                                        <!-- <div class="task-listing-description">
                                             <h3 class="task-listing-title">2000 Words English to German</h3>
                                             <ul class="task-icons">
                                                 <li><i class="icon-material-outline-location-off"></i> Online Job</li>
@@ -94,16 +94,16 @@
                                             <span class="button button-sliding-icon ripple-effect">Bid Now <i class="icon-material-outline-arrow-right-alt"></i></span>
                                         </div>
                                     </div>
-                                </a>
+                                </a> -->
             
                                 <!-- Task -->
-                                <a href="single-task-page.html" class="task-listing">
+                                <!-- <a href="single-task-page.html" class="task-listing"> -->
             
                                     <!-- Job Listing Details -->
-                                    <div class="task-listing-details">
+                                    <!-- <div class="task-listing-details"> -->
             
                                         <!-- Details -->
-                                        <div class="task-listing-description">
+                                        <!-- <div class="task-listing-description">
                                             <h3 class="task-listing-title">Fix Python Selenium Code</h3>
                                             <ul class="task-icons">
                                                 <li><i class="icon-material-outline-location-off"></i> Online Job</li>
@@ -127,16 +127,16 @@
                                             <span class="button button-sliding-icon ripple-effect">Bid Now <i class="icon-material-outline-arrow-right-alt"></i></span>
                                         </div>
                                     </div>
-                                </a>
+                                </a> -->
             
                                 <!-- Task -->
-                                <a href="single-task-page.html" class="task-listing">
+                                <!-- <a href="single-task-page.html" class="task-listing"> -->
             
                                     <!-- Job Listing Details -->
-                                    <div class="task-listing-details">
+                                    <!-- <div class="task-listing-details"> -->
             
                                         <!-- Details -->
-                                        <div class="task-listing-description">
+                                        <!-- <div class="task-listing-description">
                                             <h3 class="task-listing-title">WordPress Theme Installation</h3>
                                             <ul class="task-icons">
                                                 <li><i class="icon-material-outline-location-off"></i> Online Job</li>
@@ -160,15 +160,15 @@
                                         </div>
                                     </div>
                                 </a>
-            
+             -->
                                 <!-- Task -->
-                                <a href="single-task-page.html" class="task-listing">
+                                <!-- <a href="single-task-page.html" class="task-listing"> -->
             
                                     <!-- Job Listing Details -->
-                                    <div class="task-listing-details">
+                                    <!-- <div class="task-listing-details"> -->
             
                                         <!-- Details -->
-                                        <div class="task-listing-description">
+                                        <!-- <div class="task-listing-description">
                                             <h3 class="task-listing-title">PHP Core Website Fixes</h3>
                                             <ul class="task-icons">
                                                 <li><i class="icon-material-outline-location-off"></i> Online Job</li>
@@ -195,13 +195,13 @@
                                 </a>		
             
             
-                            </div>
+                            </div> -->
                             <!-- Jobs Container / End -->
             
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Featured Jobs / End -->
-            </div>
-            
+            <!-- </div>
+             -->
