Changes by Ridmi

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -5,4 +5,7 @@
 <app-how-works></app-how-works>
 <app-testimonals></app-testimonals>
 <app-counter></app-counter>
+<!-- <app-user></app-user> -->
+<app-users></app-users>
+<!-- <app-user-list></app-user-list> -->
     
