--- a/src/app/nav2/nav2.component.html
+++ b/src/app/nav2/nav2.component.html
@@ -11,10 +11,10 @@
         <!-- Left Side Content -->
         <div class="left-side">
             
-            <!-- Logo -->
+            <!-- Logo
             <div id="logo">
                 <a href="index.html"><img src="assets/images/logo.png" data-sticky-logo="assets/images/logo.png" data-transparent-logo="assets/images/logo2.png" alt=""></a>
-            </div>
+            </div> -->
 
             
         </div>
